--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@
     margin: 0 auto;
     text-align: center;
 }
-.flex-box-container-1{
+.flex-box-pick-color{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
